--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Riassuntore Pagina Web</title>
+  <title>Summarize-It</title>
   <style>
     #summary {
       width: 300px;
@@ -11,8 +11,8 @@
   </style>
 </head>
 <body>
-  <h2>Riassuntore Pagina Web</h2>
-  <button id="summarize-btn">Riassumi Pagina</button>
+  <h2>Summarize-It Pagina Web</h2>
+  <button id="summarize-btn">Click to summarize</button>
   <textarea id="summary" readonly></textarea>
   <script src="popup.js"></script>
 </body>
